[gd_scene load_steps=9 format=2]

[ext_resource path="res://Level/map.gd" type="Script" id=1]
[ext_resource path="res://Assets/Backgrounds/menu_background.jpg" type="Texture" id=2]
[ext_resource path="res://Level/UI_Scenes/Control.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/audios/spongebob-production.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/audios/cbc4277e031bf4a.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/audios/wova-_-z_uki_-_oda-puzyrki.mp3" type="AudioStream" id=6]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 2 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_sky_custom_fov = 110.9
background_sky_orientation = Basis( -2.357, 0.118, 1.799, -2.009, 0.749, -1.332, -2.162, -0.706, -1.778 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.8
ambient_light_sky_contribution = 0.0
glow_enabled = true

[node name="World" type="Spatial"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="levelBackground" type="WorldEnvironment" parent="UI"]
environment = SubResource( 2 )

[node name="Control" parent="UI" instance=ExtResource( 3 )]
margin_left = -30.0
margin_top = 2.0
margin_right = -1054.0
margin_bottom = -598.0

[node name="map" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0266881, 0, 0.074343 )
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.528364, 0.849018, 0, -0.849018, 0.528364, 4.02741, 10.5416, 7.7272 )

[node name="GameAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="AddStackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DelHexSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
